tests/js/invalid/function/mismatched-types-7.buri
Primary = #red | #green | #blue
Rainbow = #red | #orange | #yellow | #green | #blue | #purple

isGreen: (Rainbow) => #true | #false = (a: Primary) => a == #green